--- a/css/style.css
+++ b/css/style.css
@@ -1272,6 +1272,52 @@ body {
   visibility: visible;
   pointer-events: auto;
 }
+.wxShareWarp {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 99;
+  padding: 20px 10px;
+  width: 260px;
+  text-align: center;
+  background: #fff;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+  -webkit-transform: translate(-50%, -150%);
+          transform: translate(-50%, -150%);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.wxShareWarp.in {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+.wxShareWarp.in p {
+  line-height: 25px;
+  color: #000;
+  text-shadow: none;
+}
+.wxShareWarp .close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px;
+  z-index: 3;
+}
+.wxShareWarp .close .iconfont {
+  font-size: 25px;
+  color: #666;
+}
+.wxShareWarp #qrcode {
+  padding: 10px 20px;
+}
+.wxShareWarp #qrcode img {
+  width: 100%;
+}
 /* 返回顶部 */
 #gotop {
   position: fixed;
