--- a/css/style.less
+++ b/css/style.less
@@ -1059,11 +1059,6 @@ body {
 
 
 @media screen and (max-width: 640px) {
-	#gotop {
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
-	}
 	.tabs-bar{
 		.tags-list{
 			overflow-x: auto;
@@ -1249,7 +1244,13 @@ body {
 	}
 }
 
-
+@media screen and (max-width: 640px) {
+	#gotop {
+		width: 40px;
+		height: 40px;
+		line-height: 40px;
+	}
+}
 
 
 
