--- a/css/style.less
+++ b/css/style.less
@@ -24,52 +24,25 @@ template {
 }
 
 h1,h2,h3,h4,h5,h6 {
+	font-size: 18px;
 	font-weight: 400;
 	word-break: break-all;
 }
-
-h1,.h1 {
-	font-size: 44px;
-	line-height: 48px
-}
-
-h2,.h2 {
-	font-size: 34px;
-	line-height: 40px
-}
-
-h3,.h3 {
-	font-size: 24px;
-	line-height: 32px
-}
-
-h4,.h4 {
-	font-size: 20px;
-	line-height: 28px
-}
-
-h5,.h5 {
-	font-size: 16px;
-	line-height: 24px
-}
-
-h6,.h6 {
-	font-size: 12px;
-	line-height: 20px
-}
-
 input[type="button"],input[type="submit"],input[type="search"],input[type="reset"] {
 	cursor: pointer;
 	-webkit-appearance: button;
 }
-
 input:focus,select:focus,button:focus,textarea:focus {
 	outline: none
 }
 
-a{text-decoration:none;cursor: pointer;}
-/*a:link{color: #333;}*/
-/*a:visited{color: #333;}*/
+a{
+	color: #333;
+	text-decoration:none;
+	cursor: pointer;
+}
+/* a:link{color: #333;} */
+/* a:visited{color: #333;} */
 /*a:hover{color: #49AEEA;}*/
 /*a:active{color: #49AEEA;}*/
 
@@ -86,7 +59,6 @@ a{text-decoration:none;cursor: pointer;}
 /* 锁定页面 禁止下拉 */
 .lock {
 	overflow: hidden;
-	max-height: 100%
 }
 
 /* 文字溢出隐藏 */
@@ -209,7 +181,7 @@ a{text-decoration:none;cursor: pointer;}
 	position: fixed;
 	top: 0;
 	left: -100%;
-	z-index: 70;
+	z-index: 999;
 	width: 100%;
 	height: 3px;
 	background: #FF4081;
@@ -332,7 +304,7 @@ body {
 	top: 0;
 	left: 0;
 	bottom: 0;
-	z-index: 19;
+	z-index: 90;
 	width: 240px;
 	min-height: 100%;
 	background: #fff;
@@ -376,9 +348,21 @@ body {
 				padding: 12px 0;
 				height: calc(100% - 40px);
 				li{
-					line-height: 30px;
 					padding: 0 20px;
 					transition: .2s;
+					a{
+						display: block;
+						width: 100%;
+						height: 35px;
+						line-height: 35px;
+						font-size: 16px;
+						color: #666;
+						i{
+							font-size: 21px;
+							padding-right: 20px;
+							vertical-align: -2px;
+						}
+					}
 					&:hover{
 						background: #4154b2;
 						a{
@@ -439,20 +423,11 @@ body {
 	padding-left: 240px;
 	min-height: 100%;
 	transition: .4s ease-in-out;
-	.header-title{
-		visibility: hidden;
-		height: 55px;
-		line-height: 55px;
-		font-weight: 600;
-		font-size: 18px;
-		padding-right: 15px;
-		text-align: center;
-	}
 	.top-header{
 		position: fixed;
 		top: 0;
 		left: 0;
-		z-index: 11;
+		z-index: 8;
 		width: 100%;
 		height: 55px;
 		line-height: 55px;
@@ -462,10 +437,19 @@ body {
 		&.fixed{
 			box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.26);
 			.header-title {
-				visibility: visible;
+				opacity: 1;
 			}
 		}
 
+	}
+	.header-title{
+		opacity: 0;
+		height: 55px;
+		line-height: 55px;
+		font-weight: 600;
+		font-size: 18px;
+		padding-right: 15px;
+		text-align: center;
 	}
 	.header-icon{
 		width: 55px;
@@ -486,7 +470,8 @@ body {
 		background: #3F51B5;
 		text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
 		.title{
-			font-weight: 500;
+			font-weight: 800;
+			font-size: 45px;
 		}
 		.subtitle{
 			padding-top: 6px;
@@ -590,6 +575,7 @@ body {
 	&.in{
 		.search-input {
 			width: 360px;
+			opacity: 1;
 		}
 		#search i{
 			color: #C5CAE9;
@@ -603,10 +589,13 @@ body {
 		z-index: 2;
 		width: 0;
 		height: 32px;
+		font-size: 14px;
 		margin: 10px 10px 0 0;
 		border: none;
+		outline: none;
 		border-bottom: 2px solid #fff;
 		color: #fff;
+		opacity: 0;
 		background: transparent;
 		transition: .2s ease-in-out;
 		&::-webkit-input-placeholder {
@@ -691,6 +680,15 @@ body {
 }
 
 @media screen and (max-width: 760px) {
+	#main {
+		&.in{
+			position: relative;
+			z-index: 99;
+		}
+	}
+	#contentBox.hide{
+		display: none;
+	}
 	#header{
 		.header-title {
 			text-align: left;
@@ -700,7 +698,7 @@ body {
 		.content-header {
 			min-height: auto;
 			margin-left: 0;
-			padding: 65px 0px 0px;
+			padding: 65px 0px 10px;
 		}
 		.article-header{
 			.title{
@@ -751,30 +749,32 @@ body {
 	}
 
 	#search-warp.in {
-		position:fixed;
-		top: 0;
-		right: 0;
-		z-index: 10;
-		width: 100%;
-		padding: 0 16px 0 56px;
-		background: #3F51B5
-	}
-
-	#search-warp.in .search-input {
-		width: 100%
-	}
-
-	#search-warp.in #search-back {
-		display: block;
-		position: absolute;
+		position: fixed;
 		top: 0;
 		left: 0;
+		right: 0;
+		bottom: 0;
+		z-index: 8;
+		width: 100%;
+		height: 100vh;
+		overflow: hidden;
+		padding: 0 16px 0 56px;
+		background: #3F51B5;
+		.search-input {
+			width: 100%
+		}
+		#search-back {
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+
 	}
 	.search-panel{
-		padding-top: 56px;
-		top: 1px;
+		top: 56px;
 		right: 0;
-		z-index: 9;
+		z-index: 100;
 		width: 100%;
 		min-height: 100%;
 		max-height: 100%;
@@ -834,11 +834,12 @@ body {
 			}
 			.article-share-item{
 				li a{
+					position: relative;
 					margin-bottom: 10px;
 					display: block;
-					width: 42px;
-					height: 42px;
-					line-height: 42px;
+					width: 40px;
+					height: 40px;
+					line-height: 40px;
 					text-align: center;
 					border-radius: 50%;
 					opacity: 0;
@@ -846,6 +847,35 @@ body {
 					transform-origin: center center;
 					transform: scale(0);
 					background: #fff;
+					&:hover:after, &:hover:before{
+						transform: translate(-100%, -50%);
+						visibility: visible;
+						opacity: 1;
+					}
+					&:after, &:before{
+						position: absolute;
+						top: 50%;
+						opacity: 0;
+						pointer-events: none;
+						transition: .3s ease-in-out;
+					}
+					&:after{
+						content: '';
+						left: -3px;
+						border: 6px solid transparent;
+						border-left-color: rgba(0, 0, 0, .8);
+					}
+					&:before{
+						content: '分享到 ' attr(data-title);
+						left: -15px;
+						font-size: 12px;
+						white-space: nowrap;
+						color: #fff;
+						background: #000;
+						line-height: 2.5em;
+						padding: 0 8px;
+						border-radius: 1px;
+					}
 					&.qq{
 						color:#3D95D5;
 					}
@@ -1130,10 +1160,6 @@ body {
 	li{
 		display: inline-block;
 		margin-right: 1px;
-		padding: 3px 8px;
-		border: 1px solid #e2e2e2;
-		min-width: 20px;
-		text-align: center;
 		transition: 0.3s ease-in-out;
 		&:hover{
 			background-color: #3f51b5;
@@ -1148,9 +1174,11 @@ body {
 			}
 		}
 		a {
-			color: #333;
 			display: block;
-			text-align: center;
+			padding: 3px 8px;
+			min-width: 20px;
+			color: #333;
+			border: 1px solid #e2e2e2;
 		}
 	}
 }
@@ -1168,7 +1196,7 @@ body {
 	pointer-events: none;
 	transition: .3s ease-in-out;
 	&.in{
-		opacity: 0.3;
+		opacity: 0.6;
 		visibility: visible;
 		pointer-events: auto;
 	}
@@ -1224,7 +1252,7 @@ body {
 	position: fixed;
 	right: 16px;
 	bottom: 30px;
-	z-index: 10;
+	z-index: 8;
 	cursor: pointer;
 	width: 56px;
 	height: 56px;
