--- a/css/style.less
+++ b/css/style.less
@@ -364,9 +364,9 @@ body {
 						}
 					}
 					&:hover{
-						background: #4154b2;
+						background: rgba(0, 0, 0, .05);
 						a{
-							color: #fff;
+							color: #4154b2;
 						}
 					}
 				}
@@ -749,7 +749,7 @@ body {
 	}
 
 	#search-warp.in {
-		position: fixed;
+		position: absolute;
 		top: 0;
 		left: 0;
 		right: 0;
@@ -1231,7 +1231,6 @@ body {
 		position: absolute;
 		top: 0;
 		right: 0;
-		padding: 5px;
 		z-index: 3;
 		.iconfont{
 			font-size: 25px;
